--- a/app/views/gokicollections/new.html.erb
+++ b/app/views/gokicollections/new.html.erb
@@ -61,4 +61,9 @@
 
 
 <footer>
+	<div class="footbar">
+		<%= link_to gokicollections_path do %>
+			<%= image_tag "gokicollections/new/back.png", :size=>"100x100", :class=>"footbutton" %>
+		<% end %>
+	</div>
 </footer>
