--- a/app/assets/javascripts/gokicollections.js.erb
+++ b/app/assets/javascripts/gokicollections.js.erb
@@ -1,16 +1,20 @@
-window.onload = function() {
+$(document).on("turbolinks:load", function() {
 	var cells = document.getElementsByClassName("cell");
 	var gokis = document.getElementsByClassName("gokis");
 	
 	
 	//idle
-	for(var i=0; i<gokis.length; i++) {
-		anime({
-			targets: gokis[i],
-			rotate: 3,
-			direction: "alternate",
-			loop: true
-		});
+	for(var i=0; i<=gokis.length; i++) {
+		$("#goki"+i.toString()).click(
+			function() {
+				anime({
+					targets: this,
+					rotate: 4,
+					direction: "alternate",
+					duration: 20
+				});
+			}
+		)
 	}
 
 
@@ -21,9 +25,8 @@ window.onload = function() {
 				targets: this,
 				rotate: 3,
 				direction: "alternate",
-				duration: 45
+				duration: 20
 			});
 		}
 	)
-}
-
+});
