--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -4,6 +4,7 @@
 
 
 
+<%= form_tag({controller: :gokicollections, action: :destroy_all}, method: "delete", class:"indexform") do %>
 <main>
 	<div class="collection">
 		<% (1..9).each do |i| %>
@@ -11,9 +12,10 @@
 				<div class="cell" id="cell"+<%= i.to_s %>>
 					<div class="cell_top" id="cell_top"+<%= i.to_s %>>
 						<%= image_tag "maingokis/index/heroes/"+@gokis[i-1].img+".png", :size=>"230x130", :class=>"gokis", :id=>"goki"+i.to_s %>
+						<%= check_box_tag("check[#{@gokis[i-1].id}]", @gokis[i-1].id) %>
 					</div>
 					<div class="cell_buttom" id="cell_buttom"+<%= i.to_s %>>
-						<p class="gokiname"><%= @gokis[i-1].name %> (<%= @gokis[i-1].genre.name %>)</p>
+						<p class="gokiname"><%= @gokis[i-1].name %> (<%= @gokis[i-1].genre.name %>)   <%= link_to("edit", edit_gokicollection_path(id: @gokis[i-1].id), html_options={class:"edittag"}) %></p>
 						<p class="gokidesc"><%= @gokis[i-1].description %></p>
 					</div>
 				</div>
@@ -31,16 +33,15 @@
 
 <footer>
 	<div class="editbar">
-			<%= image_tag "gokicollections/index/editbutton.png", :size=>"100x100", :class=>"footbutton" %>
-		
 		<%= link_to new_gokicollection_path do %>
 			<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
 		<% end %>
 		
-		<%= image_tag "gokicollections/index/deletebutton.png", :size=>"100x100", :class=>"footbutton" %>
-		
+		<%= image_submit_tag "gokicollections/index/deletebutton.png", :class=>"footbutton", :id=>"deletebutton" %>
+
 		<%= link_to maingokis_path, :id=>"battlebutton" do %>
 			<%= image_tag "gokicollections/index/battlebutton.png", :size=>"100x100", :class=>"footbutton" %>
 		<% end %>
 	</div>
 </foot>
+<% end %>
