--- a/app/views/gokicollections/new.html.erb
+++ b/app/views/gokicollections/new.html.erb
@@ -15,7 +15,7 @@
 
 <main>
 	<div class="newgoki_form">
-		<%= form_for(@goki, url:{controller:'gokicollections', action:'create'}) do |form| %>
+		<%= form_for(@goki, url:{controller:'gokicollections', action:'create'}, html:{class:"ftableform"}) do |form| %>
 		<table class="formtable">
 			<tr>
 				<th>name</th>
