goki select done

--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -15,7 +15,7 @@
 						<%= check_box_tag("check[#{@gokis[i-1].id}]", @gokis[i-1].id) %>
 					</div>
 					<div class="cell_buttom" id="cell_buttom"+<%= i.to_s %>>
-						<p class="gokiname"><%= @gokis[i-1].name %> (<%= @gokis[i-1].genre.name %>)   <%= link_to("edit", edit_gokicollection_path(id: @gokis[i-1].id), html_options={class:"edittag"}) %></p>
+						<p class="gokiname"><%= @gokis[i-1].name %> (<%= @gokis[i-1].genre.name %>)   <a href="/maingokis/gindex/<%= @gokis[i-1].id %>">select</a>  <%= link_to("edit", edit_gokicollection_path(id: @gokis[i-1].id), html_options={class:"edittag"}) %></p>
 						<p class="gokidesc"><%= @gokis[i-1].description %></p>
 					</div>
 				</div>
