--- a/app/views/maingokis/gindex.html.erb
+++ b/app/views/maingokis/gindex.html.erb
@@ -5,7 +5,7 @@
 
 
 <main class="main">
-	<%= image_tag "maingokis/index/heroes/goki.png", :size=>"230x130", :id=>"goki" %>
+	<%= image_tag "maingokis/index/heroes/"+@goki.img+".png", :size=>"230x130", :id=>"goki" %>
 </main>
 
 
