--- a/app/assets/stylesheets/gokicollections.scss
+++ b/app/assets/stylesheets/gokicollections.scss
@@ -15,6 +15,8 @@ body {
 		height: 15%;
 		width: 100%;
 		background: image_url("maingokis/index/header/headerimg.png") repeat center center / 200px 200px;
+		display: flex;
+		flex-wrap: wrap;
 
 		h1 {
 			color: black;
@@ -22,8 +24,12 @@ body {
 			font-size: 80px;
 			text-align: center;
 			margin: 0 auto;
-			font-family: "arial black";
+			font-familiy: "Homemade Apple", cursive;
 			padding-Top: 20px;
+		}
+
+		#logoutbutton {
+			padding: 10px;
 		}
 	}
 
@@ -35,8 +41,12 @@ body {
 	}
 
 	
-	main {
+	
+	#indexmain{
 		height: 85%;
+	}
+	main {
+		height: 73%;
 		width: 100%;
 		border-top: solid 5px black;
 		border-bottom: solid 5px black;
@@ -151,9 +161,12 @@ body {
 	}
 
 
-
-	footer {
+	
+	#indexfooter{
 		height: 15%;
+	}
+	footer {
+		height: 12%;
 		width: 100%;
 		background: image_url("maingokis/index/footer/footerimg.png") repeat center center / 200px 200px;
 
