--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -1,11 +1,16 @@
 <header>
 	<h1>Goki Collection</h1>
+	<% if user_signed_in? %>
+		<%= link_to destroy_user_session_path, method: :delete do %>
+			<%= image_tag "maingokis/share/logout.png", :size=>"120x60", :id=>"logoutbutton" %>
+		<% end %>
+	<% end %>
 </header>
 
 
 
 <%= form_tag({controller: :gokicollections, action: :destroy_all}, method: "delete", class:"indexform") do %>
-<main>
+<main id="indexmain">
 	<div class="collection">
 		<% (1..9).each do |i| %>
 			<% if @gokis[i-1].present? %>
@@ -31,7 +36,7 @@
 
 
 
-<footer>
+<footer id="indexfooter">
 	<div class="editbar">
 		<%= link_to new_gokicollection_path do %>
 			<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
