form new/create error with all the validation

--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -13,15 +13,15 @@
 <main id="indexmain">
 	<div class="collection">
 		<% (1..9).each do |i| %>
-			<% if @gokis[i-1].present? %>
+			<% if !(@user[i-1].nil?) %>
 				<div class="cell" id="cell"+<%= i.to_s %>>
 					<div class="cell_top" id="cell_top"+<%= i.to_s %>>
-						<%= image_tag "maingokis/index/heroes/"+@gokis[i-1].img+".png", :size=>"230x130", :class=>"gokis", :id=>"goki"+i.to_s %>
-						<%= check_box_tag("check[#{@gokis[i-1].id}]", @gokis[i-1].id) %>
+						<%= image_tag "maingokis/index/heroes/"+@user[i-1].goki.img+".png", :size=>"230x130", :class=>"gokis", :id=>"goki"+i.to_s %>
+						<%= check_box_tag("check[#{@user[i-1].goki.id}]", @user[i-1].goki.id) %>
 					</div>
 					<div class="cell_buttom" id="cell_buttom"+<%= i.to_s %>>
-						<p class="gokiname"><%= @gokis[i-1].name %> (<%= @gokis[i-1].genre.name %>)   <a href="/maingokis/gindex/<%= @gokis[i-1].id %>">select</a>  <%= link_to("edit", edit_gokicollection_path(id: @gokis[i-1].id), html_options={class:"edittag"}) %></p>
-						<p class="gokidesc"><%= @gokis[i-1].description %></p>
+						<p class="gokiname"><%= @user[i-1].goki.name %> (<%= @user[i-1].goki.genre.name %>)   <a href="/maingokis/gindex/<%= @user[i-1].goki.id %>">select</a>  <%= link_to("edit", edit_gokicollection_path(id: @gokis[i-1].id), html_options={class:"edittag"}) %></p>
+						<p class="gokidesc"><%= @user[i-1].goki.description %></p>
 					</div>
 				</div>
 			<% else %>
