--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -43,6 +43,8 @@
 		<% end %>
 		
 		<%= image_submit_tag "gokicollections/index/deletebutton.png", :class=>"footbutton", :id=>"deletebutton" %>
+
+		<p id="gold">Gold: <%= current_user.gold %></p>
 	</div>
 </foot>
 <% end %>
