--- a/app/views/maingokis/gindex.html.erb
+++ b/app/views/maingokis/gindex.html.erb
@@ -5,7 +5,9 @@
 			<%= image_tag "maingokis/share/logout.png", :size=>"100x100", :id=>"logoutbutton" %>
 		<% end %>
 	<% end %>
-	<p>Score: </p><p id="score">0</p>
+	<div id="score_board">
+		<p>Score: </p><p id="score">0</p>
+	</div>
 </header>
 
 
@@ -16,9 +18,9 @@
 	</div>
 
 	<div class="enemies">
-		<%= image_tag "maingokis/index/enemy/jetman.png", :size=>"80x180", :class=>"jet" %>
-		<%= image_tag "maingokis/index/enemy/yjetman.png", :size=>"80x180", :class=>"jet" %>
-		<%= image_tag "maingokis/index/enemy/bjetman.png", :size=>"100x190", :class=>"jet" %>
+		<%= image_tag "maingokis/index/enemy/jetman.png", :size=>"90x200", :class=>"jet" %>
+		<%= image_tag "maingokis/index/enemy/yjetman.png", :size=>"80x210", :class=>"jet" %>
+		<%= image_tag "maingokis/index/enemy/bjetman.png", :size=>"110x220", :class=>"jet" %>
 	</div>
 </main>
 
