--- a/app/assets/stylesheets/gokicollections.scss
+++ b/app/assets/stylesheets/gokicollections.scss
@@ -178,6 +178,14 @@ body {
 				width: 107px;
 				height: 107px;
 			}
+
+			#gold {
+				background: linear-gradient(white, gold);
+				margin-left: auto;
+				margin-right: 10px;
+				padding: 10px;
+				border: solid 5px black;
+			}
 		}
 	}
 }
