--- a/app/views/layouts/gokicollections.html.erb
+++ b/app/views/layouts/gokicollections.html.erb
@@ -3,11 +3,17 @@
 	<head>
 		<title>GokiCollections</title>
 		<%= csrf_meta_tags %>
-		<%= stylesheet_link_tag 'gokicollections', 'data-turbolinks-track': 'reload' %>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<%= javascript_include_tag 'anime-master/lib/anime.min.js', 'data-turbolinks-track': 'reload' %>
-		<%= javascript_include_tag 'gokicollections', 'data-turbolinks-track': 'reload' %>
+
 		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+		<%= stylesheet_link_tag 'gokicollections', 'data-turbolinks-track': 'reload' %>
+		<%= javascript_include_tag 'gokicollections', 'data-turbolinks-track': 'reload' %>
+
+		<%= javascript_include_tag 'anime-master/lib/anime.min.js', 'data-turbolinks-track': 'reload' %>
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/css/swiper.min.css"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
 	</head>
 
 	<body>
