--- a/app/views/maingokis/index.html.erb
+++ b/app/views/maingokis/index.html.erb
@@ -13,13 +13,13 @@
 	<div id="explanation">
 		<h3>Movement:</h3>
 		<p>press arrow keys to move the goki up/down/right/left</p>
-		<p>press space bar to ___</p>
+		<p>press space bar or "1", "2" key to use goki tricks!</p>
 		
 		<h3>Icons</h3>
-		<p>up right icon makes you log out</p>
-		<p>bottom left icon is ___</p>
-		<p>bottom middle icon changes background image</p>
-		<p>bottom right icon moves you to gokicollection page</p>
+		<p>top purple icon makes you log out</p>
+		<p>two gold icon shows up when battling makes goki do tricks</p>
+		<p>icon with green bamboo changes background image</p>
+		<p>icon with yellow window closed moves you to gokicollection page</p>
 		
 		<h3>Goki Collection</h3>
 		<p>you can add/edit/destroy goki in gokicollection page.</p>
